--- a/css/media.css
+++ b/css/media.css
@@ -10,6 +10,51 @@
     gap: 2rem;
 }
 
+
+#candidate_list ul li input {
+  accent-color: #880000;
+}
+
+.nav-tabs {
+  border-bottom: 1px solid #ddd;
+  display: flex;
+  margin-bottom: 10px;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 10px;
+  padding: 10px 0;
+}
+
+.nav-tabs > li > a {
+  background: #17a2b8;
+  color: #fff;
+}
+
+.box-header .box-title {
+  background: #880000;
+  text-align: start;
+  padding: 15px 20px;
+  color: #fff;
+  font-size: 20px;
+  width: 100%;
+  border-radius: 12px;
+  font-weight: 400;
+}
+
+.nav > li > a:hover,
+.nav > li > a:active,
+.nav > li > a:focus {
+  background: #880000;
+  color: white;
+}
+
+.nav-tabs > li.active > a,
+.nav-tabs > li.active > a:focus,
+.nav-tabs > li.active > a:hover {
+  background: #880000;
+  color: white;
+}
+
 @media only screen and (max-width: 600px) {
   .main-header .navbar-custom-menu {
     float: unset;
